--- a/views/layouts/navigation.html
+++ b/views/layouts/navigation.html
@@ -16,7 +16,7 @@
 				<li><a href="https://github.com/vc7" target="_blank"><i class="fa fa-github-alt"></i></a></li>
 				<li><a href="https://twitter.com/vince78718" target="_blank"><i class="fa fa-twitter"></i></a></li>
 				<li><a href="http://www.linkedin.com/in/vince7" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-				<li><a href="http://blog.kumaya.co"><i class="fa fa-bold"></i></a></li>
+				<li><a href="http://blog.kumaya.co" target="_blank"><i class="fa fa-bold"></i></a></li>
 			</ul>
 		</nav>
 	</div>
