remove angular here, implement later. add ga.

--- a/views/layouts/navigation.html
+++ b/views/layouts/navigation.html
@@ -10,7 +10,8 @@
 			<a class="navbar-brand" href="#">Li-Hsuan Chen</a>
 		</div>
 		<nav class="navbar-collapse collapse">
-			<ul ng-include src="'views/layouts/navigation_links.html'" class="nav navbar-nav">
+			<ul class="nav navbar-nav">
+				<li><a ng-click="scrollTo('about')">About</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="https://github.com/vc7" target="_blank"><i class="fa fa-github-alt"></i></a></li>
