--- a/views/layouts/navigation_links.html
+++ b/views/layouts/navigation_links.html
@@ -1,3 +1,3 @@
 <li ng-repeat="item in rawData">
-	<a href="#{{ item.id }}">{{ item.title }}</a>
+	<a ng-click="scrollTo(item.id)">{{ item.title }}</a>
 </li>
