--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,5 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Lilita+One');
-@import url('http://fonts.googleapis.com/css?family=Maven+Pro:400,900');
+@import url('http://fonts.googleapis.com/css?family=Roboto+Slab:700|Raleway:400');
 
 ::-moz-selection {
    background-color: #e67e22;
@@ -10,13 +9,13 @@
 }
 
 body {
-	font-family:'Maven Pro';
+	font-family:'Raleway';
 	padding-top: 50px;
 	color: #454545;
 }
 
 h1, h2, h3, h4, h5, h6, .navbar-brand {
-	font-family:'Lilita One';font-weight:400
+	font-family:'Roboto Slab';font-weight:400
 }
 
 .navbar-inverse .navbar-brand {
@@ -30,10 +29,6 @@ h1, h2, h3, h4, h5, h6, .navbar-brand {
 .jumbotron {
 	background-color: #e67e22;
 	color: white;
-}
-
-.jumbotron h1 {
-	font-size: 6em;
 }
 
 .jumbotron .btn-outline-inverse {
@@ -75,7 +70,7 @@ h1, h2, h3, h4, h5, h6, .navbar-brand {
 
 .main .about [class^="about-"]{
 	font-size: 1.5em;
-	font-family:'Lilita One';
+	font-family:'Roboto Slab';
 	font-weight: 900;
 }
 
