--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Roboto+Slab:700|Raleway:400');
+@import url('http://fonts.googleapis.com/css?family=Roboto+Slab:700|Droid+Sans:400');
 
 ::-moz-selection {
    background-color: #e67e22;
@@ -9,7 +9,7 @@
 }
 
 body {
-	font-family:'Raleway';
+	font-family:'Droid Sans';
 	padding-top: 50px;
 	color: #454545;
 }
@@ -42,12 +42,25 @@ h1, h2, h3, h4, h5, h6, .navbar-brand {
 	color: #e67e22;
 }
 
+.jumbotron a {
+	color: white;
+	border-bottom: 2px solid white;
+}
+
+.jumbotron a:hover {
+	text-decoration: none;
+	color: #dddddd;
+	border-bottom: 2px solid #dddddd;
+}
+
 .main {
 	font-size: 1.3em;
 }
 
 .main h2 {
 	color: #e67e22;
+	margin-top: 0em;
+	padding-top: 2em;
 }
 
 .main li:before {
